# medical-image-classification-medvit-v2

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: visualize_attention_example.ipynb
results/: MedViT_tiny_PranomVignesh_MRI-Images-of-Brain-Tumor_test.json  MedViT_tiny_PranomVignesh_MRI-Images-of-Brain-Tumor_test_metrics.json  MedViT_tiny_junyeong-nero_mini-NCTCRCHE100K_test.json  MedViT_tiny_junyeong-nero_mini-NCTCRCHE100K_test_metrics.json
scripts/: inference.sh  train.sh  train_custom_dataset.sh  visualize.sh
scripts/examples/: inference_breast-histopathology-images.sh  inference_leukemia-blood-cell.sh  inference_medmnist-fewshot.sh  inference_mini-NCTCRCHE100K.sh  inference_skin-cancer-imbalanced.sh  train_breast-histopathology-images.sh  train_leukemia-blood-cell.sh  train_medmnist-fewshot.sh  train_mini-NCTCRCHE100K.sh  train_skin-cancer-imbalanced.sh
src/: dataset_builder.py  inference.py  train.py  utils.py  visualize_attention.py
src/models/: MedViT.py  fasterkan.py
weights/: .gitkeep  README.md
weights/pretrained/: .gitkeep
